Update and rename add-comment.yml to add-comment-to-issue.yml

--- a/.github/workflows/add-comment-to-issue.yml
+++ b/.github/workflows/add-comment-to-issue.yml
@@ -3,6 +3,8 @@ on:
   issues:
     types:
       - labeled
+      - edited
+      - unlabeled
 jobs:
   add-comment-to-issue:
     if: github.event.label.name == 'frontend'
