--- a/.github/workflows/add-comment-to-issue.yml
+++ b/.github/workflows/add-comment-to-issue.yml
@@ -16,7 +16,7 @@ jobs:
         run: gh issue comment "$NUMBER" --body "$BODY"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GH_REPO: issue-tracker
+          GH_REPO: ${{ github.repository }}
           NUMBER: ${{ github.event.issue.number }}
           BODY: >
             This issue is available for anyone to work on.
