--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -14,11 +14,14 @@ jobs:
       issues: write
     steps:
       - name: Move issue to frontend
-        run: gh issue comment "$NUMBER" --body "$BODY"
+        run: |
+          gh issue comment "$NUMBER" --body "$BODY"
+          gh issue transfer "$NUMBER" https://github.com/"$DST_REPO"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
           NUMBER: ${{ github.event.issue.number }}
+          DST_REPO: tapsterbv/bambooims-frontend
           BODY: >
             Dit issue is verplaatst naar de frontend.  
             :sparkles: Het gaat dus opgepakt worden! :sparkles:
