--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Move issue to frontend
         run: |
           gh issue comment "$NUMBER" --body "$BODY"
-          gh issue transfer "$NUMBER" https://github.com/"GH_REPO"
+          gh issue transfer "$NUMBER" https://github.com/"$GH_REPO"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
