--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -14,7 +14,7 @@ jobs:
       issues: write
     steps:
       - name: Move issue to frontend
-        run: gh issue transfer "$NUMBER" https://github.com/tapsterbv/bambooims-frontend
+        run: gh issue transfer "$NUMBER" https://github.com/tapsterbv/bambooims-frontend.git
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
