--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -14,12 +14,13 @@ jobs:
       issues: write
     steps:
       - name: Move issue to frontend
-        run: gh issue transfer "$NUMBER" "$DST_REPO"
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GH_REPO: ${{ github.repository }}
-          NUMBER: ${{ github.event.issue.number }}
-          DST_REPO: tapsterbv/bambooims-frontend
-          BODY: >
-            Dit issue is verplaatst naar de frontend.  
-            :sparkles: Het gaat dus opgepakt worden! :sparkles:
+        uses: actions/github-script@v7 
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: "Op deze manier een comment aanmaken?"
+            })
