--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            github.rest.issues.createComment({
+            github.rest.issues.transfer({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
