--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -12,11 +12,32 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       issues: write
-      actions: write
     steps:
       - name: Move issue to frontend
         uses: actions/github-script@v7 
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
-          script: gh issue transfer "$NUMBER" tapsterbv/bambooims-frontend
+          script: |
+            github.rest.issues.transfer({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: "Op deze manier een comment aanmaken?"
+            })
+  frontend-gh:
+    if: github.event.label.name == 'frontend'
+    runs-on: ubuntu-latest
+    permissions:
+      issues: write
+    steps:
+      - name: Move issue to frontend
+        run: gh issue transfer "$NUMBER" tapsterbv/bambooims-frontend
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_REPO: ${{ github.repository }}
+          NUMBER: ${{ github.event.issue.number }}
+          DST_REPO: tapsterbv/bambooims-frontend
+          BODY: >
+            Dit issue is verplaatst naar de frontend.  
+            :sparkles: Het gaat dus opgepakt worden! :sparkles:
 
