--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -31,7 +31,10 @@ jobs:
       issues: write
     steps:
       - name: Move issue to frontend
-        run: gh issue transfer "$NUMBER" tapsterbv/bambooims-frontend
+        run: |
+          echo $NUMBER
+          echo $DST_REPO
+          gh issue transfer "$NUMBER" tapsterbv/bambooims-frontend
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
