--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -17,12 +17,12 @@ jobs:
         uses: actions/github-script@v7 
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
+          DST_REPO: https://github.com/tapsterbv/bambooims-frontend.git
           script: |
-            github.rest.issues.transfer({
-              issue_number: context.issue.number,
+            github.rest.issues.update({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: "Op deze manier een comment aanmaken?"
+              issue_number: context.issue.number,
             })
   frontend-gh:
     if: github.event.label.name == 'frontend'
