--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -17,10 +17,9 @@ jobs:
         uses: actions/github-script@v7 
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
-          DST_REPO: https://github.com/tapsterbv/bambooims-frontend.git
           script: |
             github.rest.issues.update({
               owner: context.repo.owner,
-              repo: $DST_REPO,
+              repo: https://github.com/tapsterbv/bambooims-frontend.git,
               issue_number: context.issue.number,
             })
