--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -20,6 +20,6 @@ jobs:
           script: |
             github.rest.issues.update({
               owner: context.repo.owner,
-              repo: https://github.com/tapsterbv/bambooims-frontend.git,
+              repo: 'https://github.com/tapsterbv/bambooims-frontend.git',
               issue_number: context.issue.number,
             })
