--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -20,6 +20,6 @@ jobs:
           script: |
             github.rest.issues.update({
               owner: context.repo.owner,
-              repo: 'https://github.com/tapsterbv/bambooims-frontend',
+              repo: 'bambooims-frontend',
               issue_number: context.issue.number,
             })
