--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -18,8 +18,10 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            github.rest.issues.update({
+            github.rest.issues.create({
               owner: context.repo.owner,
               repo: 'bambooims-frontend',
-              issue_number: context.issue.number,
+              title: context.repo.title,
+              body: context.repo.body,
+              labels: context.repo.labels,
             })
