--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -29,4 +29,16 @@ jobs:
                 }
               }`)
       - name: Mutate issue
-        run: echo '${{steps.fetch-data.outputs.result}}'
+        uses: actions/github-script@v7 
+        with:
+          github-token: ${{secrets.WORKFLOW_API_KEY_GITHUB}}
+          script: |
+            return github.graphql(`
+              mutation TransferIssue {
+                transferIssue(input: {issueId: ${{steps.fetch-data.outputs.result.issueRepo.issue.id}}, repositoryId: ${{steps.fetch-data.outputs.result.dstRepo.id}}}) {
+                  issue {
+                    url
+                    number
+                  }
+                }
+              }`)
