--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Echo query data
         run: |
           echo ${{steps.fetch-data.outputs.result}}
-          echo ${{steps.fetch-data.outputs.result}}
+          echo ${{steps.fetch-data.outputs.issueRepo}}
       - name: Mutate issue
         uses: actions/github-script@v7 
         with:
