--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -32,7 +32,7 @@ jobs:
           dst_repo: "bambooims-frontend"
       - name: Proces query data
         run: |
-          content=`${{steps.fetch-data.outputs.data.dstRepo}}`
+          content=`${{steps.fetch-data.outputs.data}}`
           content="${content//'%'/'%25'}"
           content="${content//$'\n'/'%0A'}"
           content="${content//$'\r'/'%0D'}"
