--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -31,7 +31,7 @@ jobs:
           issue_repo: "issue-tracker"
           dst_repo: "bambooims-frontend"
       - name: Echo query data
-        run: echo '${{ toJSON(steps.fetch-data.outputs.data).issueRepo.issue.id }}'
+        run: echo '${{ steps.fetch-data.outputs.data.issueRepo.issue.id }}'
       - name: Mutate issue
         uses: octokit/graphql-action@v2.x
         env: 
