--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -31,7 +31,17 @@ jobs:
           issue_repo: "issue-tracker"
           dst_repo: "bambooims-frontend"
       - name: Echo query data
-        run: echo '${{ steps.fetch-data.outputs.data.issueRepo.issue.id }}'
+        id: echo-output
+        run: |
+          content=`cat ${{ steps.fetch-data.output.data }}`
+          # the following lines are only required for multi line json
+          content="${content//'%'/'%25'}"
+          content="${content//$'\n'/'%0A'}"
+          content="${content//$'\r'/'%0D'}"
+          # end of optional handling for multi line json
+          echo "::set-output name=packageJson::$content"
+      - run: |
+          echo "${{ fromJson(steps.echo-output.outputs.packageJson) }}"
       - name: Mutate issue
         uses: octokit/graphql-action@v2.x
         env: 
