--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -32,16 +32,7 @@ jobs:
           dst_repo: "bambooims-frontend"
       - name: Echo query data
         id: echo-output
-        run: |
-          content=`cat "${{ steps.fetch-data.outputs.data }}"`
-          # the following lines are only required for multi line json
-          content="${content//'%'/'%25'}"
-          content="${content//$'\n'/'%0A'}"
-          content="${content//$'\r'/'%0D'}"
-          # end of optional handling for multi line json
-          echo "::set-output name=packageJson::$content"
-      - run: |
-          echo "${{ fromJson(steps.echo-output.outputs.packageJson) }}"
+        run: echo "${{ fromJson(steps.fetch-data.outputs.data) }}"
       - name: Mutate issue
         uses: octokit/graphql-action@v2.x
         env: 
