--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -43,5 +43,5 @@ jobs:
                 }
               }
             }
-          issueId: "${{ toString(fromJson(steps.fetch-data.outputs.data).issueRepo.issue.id) }}"
+          issueId: "${{ fromJson(steps.fetch-data.outputs.data).issueRepo.issue.id }}"
           repositoryId: "${{ fromJson(steps.fetch-data.outputs.data).dstRepo.id }}"
