--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           GITHUB_TOKEN: ${{secrets.WORKFLOW_API_KEY_GITHUB}}
           query: |
-            mutation TransferIssue ($issueId: ID!, $repositoryId: ID!) {
+            mutation TransferIssue {
               transferIssue(input: {issueId: "I_kwDOLkAh0M6DSeXZ", repositoryId: "MDEwOlJlcG9zaXRvcnkxNzc2MjUxMDM="}) {
                 issue {
                   url
@@ -43,5 +43,3 @@ jobs:
                 }
               }
             }
-          issueId: ${{ fromJson(steps.fetch-data.outputs.data).issueRepo.issue.id }}
-          repositoryId: ${{ fromJson(steps.fetch-data.outputs.data).dstRepo.id }}
