--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -32,6 +32,9 @@ jobs:
           dst_repo: "bambooims-frontend"
       - name: Mutate issue
         uses: octokit/graphql-action@v2.x
+        env:
+          ISSUE_ID: ${{ fromJson(steps.fetch-data.outputs.data).issueRepo.issue.id }}
+          REPOSITORY_ID: ${{ fromJson(steps.fetch-data.outputs.data).dstRepo.id }}
         with:
           GITHUB_TOKEN: ${{secrets.WORKFLOW_API_KEY_GITHUB}}
           query: |
@@ -43,5 +46,5 @@ jobs:
                 }
               }
             }
-          issueId: ${{ fromJson(steps.fetch-data.outputs.data).issueRepo.issue.id }}
-          repositoryId: ${{ fromJson(steps.fetch-data.outputs.data).dstRepo.id }}
+          issueId: ${{ env.ISSUE_ID }}
+          repositoryId: ${{ env.REPOSITORY_ID }}
