--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -47,7 +47,9 @@ jobs:
           variables: |
             issueId: 
               name: "issueId"
+              type: ID
               value: ${{ fromJson(steps.fetch-data.outputs.data).issueRepo.issue.id }}
             repositoryId: 
               name: "repositoryId"
+              type: ID
               value: ${{ fromJson(steps.fetch-data.outputs.data).dstRepo.id }}
