--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -44,12 +44,5 @@ jobs:
                 }
               }
             }
-          variables: |
-            issueId: 
-              name: "issueId"
-              type: ID
-              value: ${{ fromJson(steps.fetch-data.outputs.data).issueRepo.issue.id }}
-            repositoryId: 
-              name: "repositoryId"
-              type: ID
-              value: ${{ fromJson(steps.fetch-data.outputs.data).dstRepo.id }}
+          issueId: "${{ fromJson(steps.fetch-data.outputs.data).issueRepo.issue.id }}"
+          repositoryId: "${{ fromJson(steps.fetch-data.outputs.data).dstRepo.id }}"
