--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -36,13 +36,13 @@ jobs:
         with:
           GITHUB_TOKEN: ${{secrets.WORKFLOW_API_KEY_GITHUB}}
           query: |
-            mutation TransferIssue ($issueId: ID!, $repositoryId: ID!) {
-              transferIssue(input: {issueId: "$issueId", repositoryId: "$repositoryId"}) {
+            mutation TransferIssue ($issue_id: ID!, $repository_id: ID!) {
+              transferIssue(input: {issueId: $issue_id, repositoryId: $repository_id}) {
                 issue {
                   url
                   number
                 }
               }
             }
-          issueId: ${{ fromJson(steps.fetch-data.outputs.data).issueRepo.issue.id }}
-          repositoryId: ${{ fromJson(steps.fetch-data.outputs.data).dstRepo.id }}
+          issue_id: ${{ fromJson(steps.fetch-data.outputs.data).issueRepo.issue.id }}
+          repository_id: ${{ fromJson(steps.fetch-data.outputs.data).dstRepo.id }}
