--- a/.github/workflows/issue-handling.yml
+++ b/.github/workflows/issue-handling.yml
@@ -5,7 +5,7 @@ on:
       - opened
       - labeled
 jobs:
-  frontend:
+  Frontend:
     if: github.event.label.name == 'frontend'
     runs-on: ubuntu-latest
     permissions:
@@ -31,20 +31,47 @@ jobs:
           owner: "tapsterbv"
           issue_repo: "issue-tracker"
           dst_repo: "bambooims-frontend"
-      - name: Add information from the issue
+      - name: Mutate issue
+        uses: octokit/graphql-action@v2.x
+        with:
+          GITHUB_TOKEN: ${{secrets.WORKFLOW_API_KEY_GITHUB}}
+          query: |
+            mutation TransferIssue ($issue_id: ID!, $repository_id: ID!) {
+              transferIssue(input: {issueId: $issue_id, repositoryId: $repository_id}) {
+                issue {
+                  url
+                  number
+                }
+              }
+            }
+          issue_id: ${{ fromJson(steps.fetch-data.outputs.data).issueRepo.issue.id }}
+          repository_id: ${{ fromJson(steps.fetch-data.outputs.data).dstRepo.id }}
+  Backend:
+    if: github.event.label.name == 'backend'
+    runs-on: ubuntu-latest
+    permissions:
+      issues: write
+    steps:
+      - name: Fetch data
+        id: fetch-data
         uses: octokit/graphql-action@v2.x 
         with:
           GITHUB_TOKEN: ${{secrets.WORKFLOW_API_KEY_GITHUB}}
           query: |
-            mutation AddComment ($subject_id: ID!, $body: String!) {
-              addComment(input:{subjectId: $subject_id, body: $body}) {
-                subject {
+            query FindMutationInfo($issue_id: Int!, $owner:String!,$issue_repo:String!,$dst_repo:String!) {
+              issueRepo: repository(owner:$owner, name:$issue_repo) {
+                issue (number: $issue_id) {
                   id
                 }
               }
+              dstRepo: repository(owner: $owner, name:$dst_repo) {
+                id
+              }
             }
-          subject_id: ${{ fromJson(steps.fetch-data.outputs.data).issueRepo.issue.id }}
-          body: 'Dit issue is afkomstig uit de Issue-tracker.\r\n Gemeld door: ${{ github.event.issue.author }}\r\n Gemeld op: ${{ github.event.issue.createdAt }}'
+          issue_id: ${{ github.event.issue.number }}
+          owner: "tapsterbv"
+          issue_repo: "issue-tracker"
+          dst_repo: "tapster-api"
       - name: Mutate issue
         uses: octokit/graphql-action@v2.x
         with:
