--- a/.github/workflows/close-declined-issue.yml
+++ b/.github/workflows/close-declined-issue.yml
@@ -37,7 +37,7 @@ jobs:
                 }
               }
             }
-          GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+          GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
           ORGANIZATION: tapsterbv
           PROJECT_NUMBER: 4
       - name: Echo data
