--- a/.github/workflows/close-declined-issue.yml
+++ b/.github/workflows/close-declined-issue.yml
@@ -43,3 +43,5 @@ jobs:
       - name: Echo data
         run: | 
           echo ${{ steps.close-declined-issue.outputs.data }}
+        env:
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
