--- a/.github/workflows/close-declined-issue.yml
+++ b/.github/workflows/close-declined-issue.yml
@@ -40,6 +40,8 @@ jobs:
           GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
           ORGANIZATION: tapsterbv
           PROJECT_NUMBER: 4
+        env:
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
       - name: Echo data
         run: | 
           echo ${{ steps.close-declined-issue.outputs.data }}
