--- a/.github/workflows/close-declined-issue.yml
+++ b/.github/workflows/close-declined-issue.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           GITHUB_TOKEN: ${{secrets.WORKFLOW_API_KEY_GITHUB}}
           query: |
-            query($org: String!, $number: Int!) {
+            query($org: "tapsterbv", $number: 4) {
               organization(login: $org){
                 projectV2(number: $number) {
                   id
